v1.1.8 (2025-04-05)
- workaround to prevent that a second reboot is required with LE10 after initial add-on installation

v1.1.7 (2025-03-25)
- icon changed to reflect the new add-on name (thanks chewitt for providing this)
- add-on description streamlined for repo

v1.1.6 (2025-03-23)
- Add-on ID changed to be integrable into the LibreELEC repo
- Copyright information updated
- README updated

v1.1.5 (2025-01-05)
- added search path for system-tools lib (gpiod)

v1.1.4 (2024-12-20)
- added gpiod support
- use gpiod if available, as workaround against the delay on restart/stop of KODI with LE12+
- regression: properly shutdown via power button of remote control possible again

v1.1.3 (2024-11-15)
- prevention of unnecessary I2C messages for updating the fan speed
- localization for Dutch added (thanks to emv-nl)

v1.1.2 (2024-08-18)
- regression: library search path included to late
- restriction of the triggering of lgpio exceptions only during the GPIO initialisation phase
- added option to use double tap for shutdown

v1.1.1 (2024-05-22)
- some typos and translation errors fixed

v1.1.0 (2024-05-21)
- add-on icon changed to follow LE style (thanks chewitt for providing this)
- issue #5: fan art modified to be more generic
- issue #4: localization for Italian added
- localization for German added

v1.0.0 (2024-05-19)
- renumbering to better follow semantic versioning

v0.0.15 (2024-05-19)
- menu structure reorganized
- regression: fan always-on setting and emergency fan (90°) doesn't worked (again)

v0.0.14~beta3 (2024-05-14)
- added fan curve for GPU and PMIC temperature

v0.0.14~beta2 (2024-05-11)
- avoid overwriting the existing rc_maps configuration, just add Argon REMOTE

v0.0.14~beta1 (2024-05-11)
- automatically switch between Celsius/Fahrenheit, depending on regional/temperature setting
- language file refactored
- regression: fan always-on setting and emergency fan (90°) doesn't worked
- switched to official add-on versioning

v0.0.13 (2024-03-21)