@@ -25,6 +25,7 @@
         <source>https://github.com/HungerHa/libreelec_addon_argononecontrol/</source>
         <news>v1.1.8 (2025-04-05)
 - workaround to prevent that a second reboot is required with LE10 after initial add-on installation
+- removed orphaned Addon class call to prevent potential memory leak
 
 v1.1.7 (2025-03-25)
 - icon changed to reflect the new add-on name (thanks chewitt for providing this)
